--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,11 +30,14 @@ dist.jar=${dist.dir}/Hibernate_-_Annotation.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-java-5.1.25-bin.jar=lib\\mysql-connector-java-5.1.25-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}:\
-    ${libs.hibernate-persistence.classpath}
+    ${libs.hibernate-persistence.classpath}:\
+    ${libs.hibernate-support.classpath}:\
+    ${libs.hibernate-persistencemodelgen.classpath}:\
+    ${file.reference.mysql-connector-java-5.1.25-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
